--- a/src/main/resources/workshop/AfficherCategorieCours.fxml
+++ b/src/main/resources/workshop/AfficherCategorieCours.fxml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-
-<?import javafx.scene.layout.Region?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="controllers.workshop.AfficherCategorieCours"
-      alignment="TOP_LEFT" spacing="15">
+      alignment="TOP_LEFT" spacing="15"
+      style="-fx-background-color: #f0f8f2;">
+
     <padding>
         <Insets top="30" right="30" bottom="30" left="30"/>
     </padding>
 
     <!-- TITRE -->
     <HBox alignment="CENTER_LEFT" spacing="10">
-        <Label text="Liste des catégories"
+        <Label text="Liste des Catégories"
                style="-fx-font-size:18px; -fx-font-weight:bold;"/>
         <Region HBox.hgrow="ALWAYS"/>
     </HBox>
 
-    <!-- BOUTON SOUS LE TITRE -->
+    <!-- BOUTON AJOUTER -->
     <Button fx:id="btnAjouter"
             text="+ Ajouter catégorie"
             style="-fx-background-color:#28a745; -fx-text-fill:white;"/>
@@ -33,14 +29,16 @@
     <TableView fx:id="categorieTableView"
                prefWidth="700" prefHeight="400">
         <columns>
-            <TableColumn fx:id="colId"
-                         text="ID" prefWidth="50"/>
-            <TableColumn fx:id="colNom"
-                         text="Nom de la catégorie" prefWidth="200"/>
-            <TableColumn fx:id="colDescription"
-                         text="Description" prefWidth="300"/>
-            <TableColumn fx:id="colDetails"
-                         text="Actions" prefWidth="150"/>
+            <TableColumn fx:id="colId" text="#" prefWidth="50"/>
+            <TableColumn fx:id="colNom" text="Nom de la Catégorie" prefWidth="200"/>
+            <TableColumn fx:id="colDescription" text="Description" prefWidth="300"/>
+            <TableColumn fx:id="colDetails" text="Details" prefWidth="200"/>
         </columns>
     </TableView>
+
+    <!-- PAGINATION -->
+    <HBox fx:id="paginationContainer"
+          alignment="CENTER"
+          spacing="8"
+          style="-fx-padding: 20 0 0 0;"/>
 </VBox>
