--- a/src/main/resources/workshop/AfficherCours.fxml
+++ b/src/main/resources/workshop/AfficherCours.fxml
@@ -2,7 +2,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.Region?>
 
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml/1"
@@ -34,4 +33,10 @@
             <TableColumn fx:id="colDetails" text="Actions" />
         </columns>
     </TableView>
+
+    <!-- Pagination Container -->
+    <HBox fx:id="paginationContainer"
+          alignment="CENTER"
+          spacing="8"
+          style="-fx-padding: 10 0 0 0;" />
 </VBox>
